[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/state_machines/StateMachine.gd" type="Script" id=1]
[ext_resource path="res://jenga_prototype/shared_variables/float_scale_factor.tres" type="Resource" id=2]
[ext_resource path="res://jenga_prototype/shared_variables/nodepath_main_camera.tres" type="Resource" id=3]
[ext_resource path="res://jenga_prototype/gameplay_elements/cups/beer_cup/SfxCup.gd" type="Script" id=4]
[ext_resource path="res://jenga_prototype/shared_variables/levels/int_level_current.tres" type="Resource" id=5]
[ext_resource path="res://jenga_prototype/gameplay_elements/cups/BaseCup.gd" type="Script" id=16]
[ext_resource path="res://jenga_prototype/gameplay_elements/cups/states/Draging.gd" type="Script" id=17]
[ext_resource path="res://jenga_prototype/gameplay_elements/cups/states/Dropped.gd" type="Script" id=18]
[ext_resource path="res://jenga_prototype/gameplay_elements/cups/states/Spawn.gd" type="Script" id=19]

[sub_resource type="PhysicsMaterial" id=1]
rough = true
bounce = 1.0
absorbent = true

[sub_resource type="PhysicsMaterial" id=2]
rough = true
bounce = 1.0
absorbent = true

[node name="BarCup" type="Node2D"]
script = ExtResource( 16 )

[node name="ResourcePreloader" type="ResourcePreloader" parent="."]
resources = [ PoolStringArray( "float_scale_factor", "nodepath_main_camera" ), [ ExtResource( 2 ), ExtResource( 3 ) ] ]

[node name="Tween" type="Tween" parent="."]

[node name="CupSides" type="RigidBody2D" parent="." groups=[
"cup",
]]
collision_layer = 2048
collision_mask = 3072
physics_material_override = SubResource( 1 )
continuous_cd = 2
linear_damp = 2.0
__meta__ = {
"_edit_group_": true
}

[node name="SideLeft" type="CollisionPolygon2D" parent="CupSides"]
polygon = PoolVector2Array( -49, -85, -49, -32, -30, 84, -44, 84, -61, -33, -61, -85 )

[node name="SideRight" type="CollisionPolygon2D" parent="CupSides"]
polygon = PoolVector2Array( 30, 84, 49, -32, 49, -85, 61, -85, 61, -33, 44, 84 )

[node name="Bottom" type="CollisionPolygon2D" parent="CupSides"]
polygon = PoolVector2Array( 30, 84, -30, 84, -35, 54, 35, 54 )

[node name="PinJoint2D" type="PinJoint2D" parent="CupSides"]

[node name="PinJoint2D2" type="PinJoint2D" parent="CupSides"]

[node name="CupTop" type="RigidBody2D" parent="." groups=[
"cup",
]]
collision_layer = 4096
collision_mask = 2147488768
physics_material_override = SubResource( 2 )
continuous_cd = 2
linear_damp = 1.0
__meta__ = {
"_edit_group_": true
}

[node name="LeftJoint" type="PinJoint2D" parent="CupTop"]
position = Vector2( -48.611, -84.1356 )
node_a = NodePath("../../CupSides")
node_b = NodePath("..")

[node name="RightJoint" type="PinJoint2D" parent="CupTop"]
position = Vector2( 47.6494, -84.1356 )
node_a = NodePath("../../CupSides")
node_b = NodePath("..")

[node name="LeftJoint2" type="PinJoint2D" parent="CupTop"]
position = Vector2( -48.611, -55.1356 )
node_a = NodePath("../../CupSides")
node_b = NodePath("..")

[node name="RightJoint2" type="PinJoint2D" parent="CupTop"]
position = Vector2( 47.6494, -55.1356 )
node_a = NodePath("../../CupSides")
node_b = NodePath("..")

[node name="Top" type="CollisionPolygon2D" parent="CupTop"]
visible = false
polygon = PoolVector2Array( -49, -85, 49, -85, 49, -55, -49, -55 )

[node name="CupDetector" type="Area2D" parent="."]
collision_layer = 8192
collision_mask = 9216

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CupDetector"]
polygon = PoolVector2Array( -65, -90, 65, -90, 65, 90, -65, 90 )

[node name="SfxHitDetector" type="Area2D" parent="."]
collision_layer = 16384
collision_mask = 3072

[node name="SfxCollision" type="CollisionPolygon2D" parent="SfxHitDetector"]
modulate = Color( 0, 1, 1, 1 )
polygon = PoolVector2Array( -65, -90, 65, -90, 65, 90, -65, 90 )

[node name="SfxFitDetector" type="Area2D" parent="."]
collision_layer = 16384
collision_mask = 2048

[node name="SfxFitArea" type="CollisionPolygon2D" parent="SfxFitDetector"]
modulate = Color( 0.266667, 0, 1, 1 )
polygon = PoolVector2Array( -47, -75, 47, -75, 47, -30, -47, -30 )

[node name="BreakArea" type="Area2D" parent="."]
collision_layer = 16384
collision_mask = 2048

[node name="BreakPolygon" type="CollisionPolygon2D" parent="BreakArea"]
modulate = Color( 0.266667, 0, 1, 1 )
polygon = PoolVector2Array( -43, -9, 43, -9, 37, 26, -37, 26 )

[node name="SfxHit" type="Node" parent="."]
script = ExtResource( 4 )
current_level = ExtResource( 5 )

[node name="SfxTable" type="Node" parent="."]
script = ExtResource( 4 )
current_level = ExtResource( 5 )

[node name="SfxFit" type="Node" parent="."]
script = ExtResource( 4 )
current_level = ExtResource( 5 )

[node name="CupStateMachine" type="Node" parent="."]
script = ExtResource( 1 )
initial_state = NodePath("Spawn")

[node name="Spawn" type="Node" parent="CupStateMachine"]
script = ExtResource( 19 )

[node name="Dragging" type="Node" parent="CupStateMachine"]
script = ExtResource( 17 )

[node name="Dropped" type="Node" parent="CupStateMachine"]
script = ExtResource( 18 )
[connection signal="body_entered" from="SfxHitDetector" to="." method="_on_SfxHitDetector_body_entered"]
[connection signal="body_entered" from="SfxFitDetector" to="." method="_on_SfxFitDetector_body_entered"]
[connection signal="body_entered" from="BreakArea" to="." method="_on_BreakArea_body_entered"]
[connection signal="body_exited" from="BreakArea" to="." method="_on_BreakArea_body_exited"]
